--- a/react-project/package.json
+++ b/react-project/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "antd": "^5.24.3",
     "boxicons": "^2.1.4",
+    "leaflet-routing-machine": "^3.2.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
