--- a/react-project/package.json
+++ b/react-project/package.json
@@ -18,7 +18,8 @@
     "boxicons": "^2.1.4",
     "leaflet-routing-machine": "^3.2.12",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
